search book function